프론트 병합버전