@@ -1,7 +1,7 @@
 package com.goorm.clonestagram.config;
 
-
 import com.goorm.clonestagram.login.service.CustomUserDetailsService;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -17,40 +17,34 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
-
     private final CustomUserDetailsService customUserDetailsService;
 
-    // UserDetailsService 주입
     public SecurityConfig(CustomUserDetailsService customUserDetailsService) {
         this.customUserDetailsService = customUserDetailsService;
     }
 
-    // BCryptPasswordEncoder를 Bean으로 등록
     @Bean
     public BCryptPasswordEncoder bCryptPasswordEncoder() {
-        return new BCryptPasswordEncoder();  // BCryptPasswordEncoder 객체 반환
+        return new BCryptPasswordEncoder();
     }
 
-    // AuthenticationManager 설정
     @Bean
     public AuthenticationManager authenticationManager(HttpSecurity http) throws Exception {
         AuthenticationManagerBuilder authenticationManagerBuilder =
                 http.getSharedObject(AuthenticationManagerBuilder.class);
 
-        // 사용자 서비스와 비밀번호 인코더를 설정
         authenticationManagerBuilder.userDetailsService(customUserDetailsService)
                 .passwordEncoder(bCryptPasswordEncoder());
 
-        // AuthenticationManager를 빈으로 반환
         return authenticationManagerBuilder.build();
     }
 
-    // HTTP 보안 설정 (로그인, 로그아웃, CSRF 등)
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
@@ -60,29 +54,38 @@ public class SecurityConfig {
                                 "/v3/api-docs/**",
                                 "/swagger-ui/**",
                                 "/swagger-ui.html",
-                                "/swagger.html"
+                                "/swagger.html",
+                                "/search/tag/suggestions",
+                                "/search/tag",
+                                "/me"
                         ).permitAll()
                         .anyRequest().authenticated()
                 )
                 .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .logout(logout -> logout.permitAll())
-                .formLogin(form -> form.disable()) // REST API이므로 formLogin은 끔
-                .httpBasic(basic -> basic.disable()); // httpBasic도 REST에서는 보통 꺼둠 (JWT 기반이면 특히)
+                .logout(logout -> logout
+                        .logoutUrl("/logout")
+                        .logoutSuccessHandler((request, response, authentication) -> {
+                            response.setStatus(HttpServletResponse.SC_OK); // ✅ 그냥 200 응답
+                        })
+                )
+                .formLogin(form -> form.disable())
+                .httpBasic(basic -> basic.disable());
 
         return http.build();
     }
 
-
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        // ✅ Spring Boot 3 이상에서는 allowedOriginPatterns 사용 권장
+        configuration.setAllowedOriginPatterns(List.of("http://localhost:5173")); // Vite 사용 시 포트 확인!
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowCredentials(true); // ✅ 세션 쿠키 허용
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
-
 }
